--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
+  "name": "The Amazing verinice.veo documentation",
+  "version": "0.0.1",
+  "description": "A project documentation using VitePress",
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
+  },
+  "devDependencies": {
+    "vitepress": "^1.0.2"
   }
 }
+
+
+
