Install packages needed to remove inline scripts
verinice-veo#2907

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "docs:preview": "vitepress preview"
   },
   "devDependencies": {
+    "glob": "^10.3.16",
+    "hash-sum": "^2.0.0",
     "vitepress": "^1.0.2"
   }
 }
