--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:preview": "vitepress preview",
+    "postdocs:build": "node externalize-scripts.mjs"
   },
   "devDependencies": {
     "glob": "^10.3.16",
@@ -15,6 +16,3 @@
     "vitepress": "^1.0.2"
   }
 }
-
-
-
