--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "glob": "^13.0.0",
     "hash-sum": "^2.0.0",
+    "mermaid": "^11.12.1",
     "typescript": "^5.8.3",
-    "vitepress": "^1.0.2"
+    "vitepress": "^1.0.2",
+    "vitepress-plugin-mermaid": "^2.0.17"
   }
 }
